# audio-tensorboard

./: .gitignore  LICENSE  MANIFEST.in  README.md  app.py  pyproject.toml  requirements.txt  setup.py
atb/: __init__.py  app.py  cli.py
atb/templates/: index.html
templates/: index.html
