[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "audiotensorboard"
version = "0.1.0"
description = "现代化的TensorBoard日志可视化工具"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "AudioTensorBoard Contributors"}
]
keywords = ["tensorboard", "visualization", "machine-learning", "deep-learning", "audio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "flask>=2.0.0",
    "tensorboard>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/AudioTensorBoard"
"Bug Tracker" = "https://github.com/yourusername/AudioTensorBoard/issues"

[project.scripts]
atb = "atb.cli:main"

[tool.setuptools]
packages = ["atb"]

[tool.setuptools.package-data]
atb = ["templates/*.html"]

